# skills

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
docs/superpowers/specs/: 2026-05-18-hermes-pkm-skill-set-design.md
my-video/: package-lock.json  package.json
skill-tests/agent-browser/: 02-products.json  05-cart-contents.json  11-hn-top10.json  22-rust-wikipedia.json  60-jbhifi-shopify.json  60-jbhifi-state.json  README.md
skill-tests/html-skills/: 01-spec-planning-offline-sync.html  02-code-review-pr.html  03-architecture-diagram.html  04-brainstorm-grid.html  05-comparison-matrix.html  06-data-explorer.html  07-design-prototypes.html  08-design-tokens.html  09-erd-explorer.html  10-interactive-playground.html  11-mind-map.html  12-research-report.html  13-slideshow-deck.html  14-svg-diagrams.html  15-throwaway-editor.html  16-timeline-roadmap.html  index.html
skill-tests/repo-setup/: .gitignore  .setup-env.toml  Makefile  README.md  pyproject.toml
skill-tests/repo-setup/.github/: pull_request_template.md
skill-tests/repo-setup/docs/: CODE_QUALITY_SETUP_GUIDE.md
skill-tests/repo-setup/scripts/: code_quality_notebook_analyser.py
skills/engineering/: README.md
skills/engineering/check-setup-against-standards/: SKILL.md
skills/engineering/drawio-aws-diagrams/: CONVENTIONS.md  SKILL.md  STENCILS.md  verify.py
skills/engineering/prove-it/: QUESTION_FRAMEWORK.md  SKILL.md
skills/engineering/set-up-env/: SKILL.md  STANDARDS.md
skills/engineering/set-up-env/scripts/: audit.py  scaffold.sh
skills/goose/: README.md
skills/gsd/: README.md
skills/html/: ATTRIBUTION.md  README.md
skills/learning/: README.md
skills/learning/book-2-site/: SKILL.md  reference.md
skills/learning/youtube-summary/: SKILL.md
skills/personal/: README.md
skills/personal/hello-dummy/: SKILL.md
skills/personal/sync-test-dummy/: SKILL.md
skills/personal_agent/: README.md
skills/personal_agent/curate/: SKILL.md
skills/personal_agent/daily-review/: SKILL.md
skills/personal_agent/extract-graph/: SKILL.md
skills/personal_agent/ingest-article/: SKILL.md
skills/personal_agent/ingest-pdf/: SKILL.md
skills/personal_agent/ingest-quick-note/: SKILL.md
skills/personal_agent/ingest-voice-note/: SKILL.md
skills/personal_agent/ingest-youtube/: SKILL.md
skills/personal_agent/obsidian-vault/: SKILL.md
skills/personal_agent/recall/: SKILL.md
skills/personal_agent/synthesize-wiki/: SKILL.md
skills/personal_agent/update-index/: SKILL.md
skills/productivity/: README.md
skills/productivity/excalidraw-mcp-drawing/: SKILL.md
skills/productivity/grill-me/: SKILL.md
skills/productivity/grill-with-docs/: SKILL.md
skills/productivity/to-prd/: SKILL.md
skills/productivity/write-a-skill/: SKILL.md
(+9 files in other folders)
